objects/CoverageBenefit.object
<CustomObject>
    <fields>
        <fullName>PC_BillingMessage__c</fullName>
        <description>Message received after the billing process is completely executed.</description>
        <label>Billing Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_BuyAndBill__c</fullName>
        <description>Indicates if buying and billing is permitted or not.  The status types are:
• Yes: If buying and billing is permitted.
•  No: If buying and billing is not permitted.
•  Undetermined: If you cannot determine whether buying and billing is permitted or not.
•  N/A: If buying and billing is not applicable.</description>
        <label>Buy And Bill</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CoverageLevel__c</fullName>
        <description>Indicates the type of the health plan associated with the patient. The types of health plan are:
        • Primary: If it is a primary health plan.
            • Secondary: If it is a secondary health plan.</description>
        <label>Coverage Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CoverageStatus__c</fullName>
        <description>Indicates the patient&apos;s insurance policy status. The status types are:
• Active: If the patient&apos;s insurance policy status is active.
• Inactive: If the patient&apos;s insurance policy status is inactive.
• Incomplete: If the patient&apos;s insurance policy status is incomplete.
• Ineligible: If the patient&apos;s insurance policy status is not eligible.
• Undetermined: If the patient&apos;s insurance policy status cannot be determined.</description>
        <label>Coverage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_EndDate__c</fullName>
        <description>Date (as reported by Payer) when the policy was effective.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_GovernmentPlanType__c</fullName>
        <description>Types of the government policies from Government Plan table are:
• Government Policy Type from Government Plan Table FEP
• Managed Medicaid
• Medicaid, Medicare
• Medicare Advantage
• Medicare Supplemental
• Tricare V/A</description>
        <label>Government Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>Managed Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplemental</fullName>
                </value>
                <value>
                    <fullName>Tricare V/A</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_GroupName__c</fullName>
        <description>The group name of the policy plan, as reported in the Payer eligibility response.</description>
        <label>Group Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_GroupNo__c</fullName>
        <description>The group number of the policy plan, as reported in the Payer eligibility response.</description>
        <label>Group No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HealthPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the health plan associated with the patient.</description>
        <label>Health Plan</label>
        <referenceTo>PC_Health_Plan__c</referenceTo>
        <relationshipLabel>Coverage Benefits</relationshipLabel>
        <relationshipName>PC_Coverage_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_IsGovernmentPlan__c</fullName>
        <description>Indicates if government plan is detected or not.  The status types are:
• Yes: If the government plan is required.
•  No: If the government plan is not required.
•  Undetermined: If you cannot determine whether the government plan is required or not.
•  N/A: If the government plan is not applicable.</description>
        <label>Is Government Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_McSuppPlanLetter__c</fullName>
        <description>Indicates the patient’s Medicare Supplemental Policy Plan Letter. This letter will be provided if known.</description>
        <label>MC Support Plan Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PA_Required__c</fullName>
        <description>Indicates if prior authorization is required or not.  The status types are:
• Yes: If the prior authorization is required.
•  No: If the prior authorization is not required.
•  Undetermined: If you cannot determine whether the prior authorization is required or not.
•  N/A: If the prior authorization is not applicable.</description>
        <label>PA Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PayerMessage__c</fullName>
        <description>The messages received from the payer.</description>
        <label>Payer Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PayerName__c</fullName>
        <description>The name of the health plan payer.</description>
        <label>Payer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PlanName__c</fullName>
        <description>The name of the policy plan, as reported in the Payer eligibility response.</description>
        <label>Plan Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PlanType__c</fullName>
        <description>The type of the policy plan, as reported in the Payer eligibility response.</description>
        <label>Plan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PriorAuthMessage__c</fullName>
        <description>Message received when prior authorization is executed. This field is populated only when a Prior Authorization is required.</description>
        <label>Prior Auth Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ProductAdminMessag__c</fullName>
        <description>Message received from the administrator for a specific transaction.</description>
        <label>Product Admin Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ProgramCoverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the program coverage associated with the patient.</description>
        <label>Program Coverage</label>
        <referenceTo>PC_Program_Coverage__c</referenceTo>
        <relationshipLabel>Coverage Benefits</relationshipLabel>
        <relationshipName>PC_Coverage_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SpecialtyPharmacyInfo__c</fullName>
        <description>Indicates if the specialty pharmacy is required or not .  The status types are:
            • Yes: If the specialty pharmacy is required.
            •  No: If the specialty pharmacy is not required.
            •  Undetermined: If you cannot determine whether the specialty pharmacy is required or not.
            •  N/A: If the specialty pharmacy is not applicable.</description>
        <label>Specialty Pharmacy Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SpecialtyPharmacyRequired__c</fullName>
        <description>Information about the associated specialty pharmacy.</description>
        <label>Specialty Parmacy Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_StartDate__c</fullName>
        <description>Date when the coverage benefit was initiated.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_TransactionDate__c</fullName>
        <description>Indicates the date of transaction</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_TransactionID__c</fullName>
        <description>Unique ID assigned to the policy transaction.</description>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TransactionMessageID__c</fullName>
        <description>Id of the transaction message ( if applicable).</description>
        <label>Transaction Message ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_CoverageBenefits</fullName>
        <filterScope>Everything</filterScope>
        <label>All Coverage Benefits</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>